[gd_scene load_steps=4 format=3 uid="uid://dfbinivntgx8o"]

[ext_resource type="Script" uid="uid://bxxcolv5x0at8" path="res://Assets/Scripts/Menu/PausMenu.gd" id="1_c6h01"]
[ext_resource type="Script" uid="uid://drh2nkosbfpk6" path="res://Assets/Scripts/Ui/Volume_slider.gd" id="2_0cmx3"]
[ext_resource type="Theme" uid="uid://ck8r6t143fvma" path="res://Assets/Resources/Menu_buttons.tres" id="2_37ajk"]

[node name="PausMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_c6h01")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.5
offset_top = -150.5
offset_right = 77.5
offset_bottom = 150.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("2_37ajk")

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_vertical = 7
text = "Resume"
flat = true

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
text = "Restart"
flat = true

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Master_volume" type="HSlider" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Volym"
max_value = 1.0
step = 0.01
script = ExtResource("2_0cmx3")
bus_name = "Master"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
text = "Quit"
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.3
one_shot = true

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_button_3_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
